--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,14 +22,14 @@ jobs:
           context: .
           push: true
           tags: trandinhthangv1/api-app:latest
-      - name: SSH into EC2 instance
-        uses: appleboy/ssh-action@v0.1.7
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
-          script: |
-            docker stop api-app
-            docker rm api-app
-            docker pull ${{ secrets.DOCKER_USERNAME }}/api-app:latest
-            docker run -d --name api-app -p 3000:3000 ${{ secrets.DOCKER_USERNAME }}/api-app:latest
+      # - name: SSH into EC2 instance
+      #   uses: appleboy/ssh-action@v0.1.7
+      #   with:
+      #     host: ${{ secrets.EC2_HOST }}
+      #     username: ${{ secrets.EC2_USER }}
+      #     key: ${{ secrets.EC2_KEY }}
+      #     script: |
+      #       docker stop api-app
+      #       docker rm api-app
+      #       docker pull ${{ secrets.DOCKER_USERNAME }}/api-app:latest
+      #       docker run -d --name api-app -p 3000:3000 ${{ secrets.DOCKER_USERNAME }}/api-app:latest
